--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sakai-ng",
-  "version": "14.0.0",
+  "name": "waleed-ng",
+  "version": "18.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,19 +10,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.2.10",
-    "@angular/cdk": "~14.0.0",
-    "@angular/common": "~15.2.10",
-    "@angular/compiler": "~15.2.10",
-    "@angular/core": "~15.2.10",
-    "@angular/forms": "~15.2.10",
-    "@angular/platform-browser": "~15.2.10",
-    "@angular/platform-browser-dynamic": "~15.2.10",
-    "@angular/router": "~15.2.10",
-    "chart.js": "^3.3.2",
+    "@angular/animations": "^18.2.6",
+    "@angular/cdk": "^18.2.6",
+    "@angular/common": "^18.2.6",
+    "@angular/compiler": "^18.2.6",
+    "@angular/core": "^18.2.6",
+    "@angular/forms": "^18.2.6",
+    "@angular/platform-browser": "^18.2.6",
+    "@angular/platform-browser-dynamic": "^18.2.6",
+    "@angular/router": "^18.2.6",
+    "chart.js": "^3.9.1",
     "primeflex": "^3.2.0",
-    "primeicons": "5.0.0",
-    "primeng": "^19.1.3",
+    "primeicons": "7.0.0",
+    "primeng": "^17.18.11",
     "prismjs": "1.9.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -30,24 +30,24 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.2.11",
-    "@angular/cli": "~15.2.11",
-    "@angular/compiler-cli": "~15.2.10",
-    "@types/jasmine": "~3.10.0",
+    "@angular-devkit/build-angular": "^18.2.6",
+    "@angular/cli": "^18.2.6",
+    "@angular/compiler-cli": "^18.2.6",
+    "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.10.0",
+    "jasmine-core": "~4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.9.5"
+    "typescript": "~5.4.5"
   }
 }
